# neuronal-decay

./: .gitignore  LICENSE.txt  README.md  import_test.sh  poetry.toml  pyproject.toml  run.sh  run_profile.sh
analysis/: cli.py  main.py  metrics.py  plots.py  processing.py
artifacts/results/: results_105883.json  results_153441.json  results_290353.json  results_2958.json  results_372621.json  results_42775.json  results_446869.json  results_72745.json  results_777330.json  results_812518.json  results_876171.json  results_942000.json  results_94467.json  results_948129.json  results_9782.json
misc/: main.py  rotations.py  stability_gap.py
src/: evaluation.py  training.py  utilities.py
training/: cli.py  config.py  data.py  execution.py  experiments.py  main.py  model.py  train.py
utilities/: fs.py  generic.py  import_test.py  meta.py  profiling.py  structs.py
