[project]
name = "neuronal-decay"
version = "1.0.0"
description = ""
authors = [{name = "Your Name",email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12.0"  # Developed using 3.12.8
dependencies = [
    "marimo (==0.13.10)",  # TODO: Loosen up the version requirement
    "matplotlib (==3.10.3)",
    "numpy (==2.2.6)",
]

# System-wide dependecies that should be installed.
# To reproduce the results, you may need to use the exact versions below:
#
# torch        2.7.0+cu128
# torchvision  0.22.0

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
