[project]
name = "neuronal-decay"
version = "1.0.0"
description = ""
authors = [{name = "Your Name",email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12.0"  # Developed using 3.12.8
dependencies = [
    "matplotlib (==3.10.3)", # TODO: Loosen up the version requirement
    "numpy (==2.2.6)",
    "torch (==2.7.0)",
    "torchvision (==0.22.0)",
    "thop (==0.1.1.post2209072238)",
]

[tool.poetry.dependencies]
torch = {source = "torch-cpu"}  # Replace with torch-cpu if desired
torchvision = {source = "torch-cpu"}  # Replace with torch-cpu if desired

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
