[project]
name = "neuronal-decay"
version = "1.0.0"
description = ""
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12.0"  # Developed using 3.12.8
dependencies = []

[tool.poetry.dependencies]
torch = {version = "~2.7.0", source = "torch-cuda"}  # Developed using 2.7.0; replace with torch-cpu if desired
torchvision = {version = "~0.22.0", source = "torch-cuda"}  # Developed using 0.22.0; replace with torch-cpu if desired
matplotlib = "~3.10.0"  # Developed using 3.10.3
numpy = "~2.2.0"  # Developed using 2.2.6
thop = "~0.1.1.post2209072238"  # Developed using 0.1.1.post2209072238

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
